Fix overlapping header / grid weirdness
Resolves #76

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -3,6 +3,7 @@
   display: flex;
   margin: auto;
   flex-direction: column;
+  padding: 1em;
 
   p {
     text-align: center;
